--- a/notebooks/0-python-basics.ipynb
+++ b/notebooks/0-python-basics.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +66,77 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class food:\n",
+    "    def _init_(self,name):\n",
+    "       self.name = name\n",
+    "    \n",
+    "    def _init_(self, name = 'apple', color = 'red', size = 0, price = 0):\n",
+    "       self.name = name\n",
+    "       self.color = color\n",
+    "       self.size = size\n",
+    "       self.price = price\n",
+    "       self.quantity = 1\n",
+    "    \n",
+    "    def printinfo(self):\n",
+    "        if self.name == '':\n",
+    "            print(\"i am nothing\")\n",
+    "        else:\n",
+    "             print(\"I am a\", self.name)\n",
+    "             print(f\"I am a {self.name}.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "food() takes no arguments",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[57], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m f1 \u001b[38;5;241m=\u001b[39m food()\n\u001b[0;32m----> 2\u001b[0m f2 \u001b[38;5;241m=\u001b[39m \u001b[43mfood\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbanana\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m f3 \u001b[38;5;241m=\u001b[39m food(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124morange\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124morange\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m f4 \u001b[38;5;241m=\u001b[39m food(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgrape\u001b[39m\u001b[38;5;124m'\u001b[39m, size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: food() takes no arguments"
+     ]
+    }
+   ],
+   "source": [
+    "f1 = food()\n",
+    "f2 = food('banana')\n",
+    "f3 = food('orange', 'orange')\n",
+    "f4 = food('grape', size = 3)\n",
+    "f5 = food('pear', 3) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'f5' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[56], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mf5\u001b[49m\u001b[38;5;241m.\u001b[39mprice\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'f5' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "f5.price"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -76,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,14 +192,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello mingyu!\n",
+      "Next year, you will be 24!\n"
+     ]
+    }
+   ],
    "source": [
     "# Getting user input and using it\n",
-    "\n",
-    "\n",
-    "# Working with numbers\n"
+    "name =input(\"what's your name? >>>\")\n",
+    "print(\"hello \" + name + \"!\")\n",
+    "# Working with numbers\n",
+    "age = input(\"how old you  >>>\")\n",
+    "print(\"Next year, you will be \" + str(int(age)+1) + \"!\")"
    ]
   },
   {
@@ -142,11 +224,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (1157342455.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[67], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    if number > 0:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
-    "# Basic if-else example\n"
+    "# Basic if-else example\n",
+    "number = int(input(\"Enter a number: >>>\"))\n",
+    "\n",
+    "    if number > 0:\n",
+    "    print(\"you are positive!\")\n",
+    "    elif number % 2 == 0:\n",
+    "    print(\"you are even!\")\n",
+    "    else:\n",
+    "    print(\"You are odd\")\n",
+    "else: \n",
+    "    print(\"you are negative!\")"
    ]
   },
   {
@@ -160,11 +261,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loop iteration 1\n",
+      "Loop iteration 2\n",
+      "Loop iteration 3\n",
+      "Loop iteration 4\n",
+      "Loop iteration 5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Basic for loop example\n"
+    "# Basic for loop example\n",
+    "for x in range(5):\n",
+    "    print(\"Loop iteration\", x+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loop iteration 10\n",
+      "Loop iteration 30\n",
+      "Loop iteration 50\n",
+      "Loop iteration 70\n",
+      "Loop iteration 90\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(10, 100, 20):\n",
+    "    print(\"Loop iteration\", x)"
    ]
   },
   {
@@ -178,11 +315,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count:  1\n",
+      "count:  2\n",
+      "count:  3\n",
+      "count:  4\n",
+      "count:  5\n",
+      "count:  6\n",
+      "count:  7\n",
+      "count:  8\n",
+      "count:  9\n",
+      "count:  10\n",
+      "count:  11\n",
+      "count:  12\n"
+     ]
+    }
+   ],
    "source": [
-    "# Basic while loop example\n"
+    "# Basic while loop example\n",
+    "# For loops need:\n",
+    "#   1. start point\n",
+    "#   2. end point (condition)\n",
+    "#   3. step\n",
+    "\n",
+    "\n",
+    "\n",
+    "start = 1 # start point\n",
+    "while start <= 12: # end point (condition)\n",
+    "    print(\"count: \", start)\n",
+    "    start +=1 #step"
    ]
   },
   {
@@ -196,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,9 +451,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (543566414.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[33], line 7\u001b[0;36m\u001b[0m\n\u001b[0;31m    # Example usage\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
    "source": [
     "def fibonacci(n):\n",
     "    # Base cases\n",
