--- a/notebooks/1-info-in-memory.ipynb
+++ b/notebooks/1-info-in-memory.ipynb
@@ -15,12 +15,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before swap: [10, 20, 30, 40, 50]\n",
+      "After swap: [10, 40, 30, 20, 50]\n"
+     ]
+    }
+   ],
    "source": [
     "# Function to swap two values in an array\n",
-    "\n",
+    "def swap(arr, index1, index2):\n",
+    "    temp = arr[index1]\n",
+    "    arr[index1] = arr[index2]\n",
+    "    arr[index2] = temp\n",
     "\n",
     "# Example usage\n",
     "array = [10, 20, 30, 40, 50]\n",
@@ -31,6 +43,27 @@
     "swap(array, 1, 3)\n",
     "\n",
     "print(\"After swap:\", array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[50, 40, 30, 20, 10]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "swap(array, 0, 4)\n",
+    "array"
    ]
   },
   {
@@ -48,14 +81,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array: [12, 11, 13, 5, 6]\n",
+      "Sorted array: [5, 6, 11, 12, 13]\n"
+     ]
+    }
+   ],
    "source": [
     "# Book solution\n",
+    "def insertion_sort(A, debug= 0):\n",
+    "    N = len(A)\n",
+    "    i = 1 # ith index = 1\n",
+    "\n",
+    "    while i < N:\n",
+    "        current = A[i] #11\n",
+    "        j = i - 1 # jth index = 0\n",
+    "\n",
+    "        while j >= 0 and A[j] > current: \n",
+    "            A[j + 1] = A[j] #0th item saved into the 1st item\n",
+    "            j -= 1 # j = j-1\n",
+    "\n",
+    "            if debug: # debug == 1 or debug == True\n",
+    "               print(f\"Inside while: Array: {A}, current: {current}, i: {i}, j: {j}\")\n",
+    "\n",
+    "        A[j + 1] = current\n",
+    "        i += 1\n",
+    "        if debug: # debug == 1 or debug == True\n",
+    "           print(f\"Outside while: Array: {A}, current: {current}, i: {i}, j: {j}\")\n",
+    " \n",
     "\n",
     "\n",
     "# Example usage\n",
+    "array = [12, 11, 13, 5, 6]\n",
+    "print(\"Original array:\", array)\n",
+    "insertion_sort(array)\n",
+    "print(\"Sorted array:\", array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array: [12, 11, 13, 5, 6]\n",
+      "Sorted array: [5, 6, 11, 12, 13]\n"
+     ]
+    }
+   ],
+   "source": [
     "array = [12, 11, 13, 5, 6]\n",
     "print(\"Original array:\", array)\n",
     "insertion_sort(array)\n",
@@ -77,12 +160,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now at idndex: 5\n",
+      "hello and hello are exactly equal.\n"
+     ]
+    }
+   ],
    "source": [
     "# Function to check if two strings are exactly equal\n",
-    "\n",
+    "def compare_strings_exactly(str1, str2):\n",
+    "    # same length\n",
+    "    if len(str1) != len(str2):\n",
+    "        print(\"str1 and str2 are NOT the same length!\")\n",
+    "        return False\n",
+    "    \n",
+    "    # compare 1 by 1\n",
+    "    size = len(str1)\n",
+    "    i = 0 # string postion index\n",
+    "    while i < size and str1[i] == str2[i]:\n",
+    "        i +=1\n",
+    "    \n",
+    "    print(f\"Now at idndex: {i}\")\n",
+    "    return i == size  # if same, return True, if not same , return False\n",
+    "         \n",
     "\n",
     "# Example usage\n",
     "string1 = \"hello\"\n",
@@ -96,10 +202,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now at idndex: 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compare_strings_exactly(\n",
+    "    \"local\",\n",
+    "    \"loca1\"\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
