--- a/notebooks/2-binary-search-linked-lists.ipynb
+++ b/notebooks/2-binary-search-linked-lists.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,12 +66,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array: [10, 15, 21, 30, 45], target: 21, [low: 0, mid: 2, high: 4]\n",
+      "Congratulations!\n",
+      "Value 21 found at index (True, 2).\n"
+     ]
+    }
+   ],
    "source": [
     "# Function for Binary Search to find a value in a sorted array\n",
+    "def binary_search(A, target):\n",
+    "    # Define the initial bounds (high, low)\n",
+    "    high = len(A) -1 # last index\n",
+    "    low = 0 # first index\n",
     "\n",
+    "    #searcg while search sapce is valid\n",
+    "    while low <= high:\n",
+    "        mid = (high + low) // 2\n",
+    "        print(f\"Array: {A}, target: {target}, [low: {low}, mid: {mid}, high: {high}]\")\n",
+    "\n",
+    "        #check if middle is our target\n",
+    "        if A[mid] == target:\n",
+    "            print(\"Congratulations!\")\n",
+    "            return True, mid\n",
+    "        elif A[mid] < target:\n",
+    "            low = mid + 1 # Value is in the right half\n",
+    "        else:\n",
+    "            high = mid -1 # Value is in the left half\n",
+    "\n",
+    "    return -1\n",
     "\n",
     "# Example usage (array must be sorted for binary search)\n",
     "array = [10, 15, 21, 30, 45]\n",
@@ -103,12 +132,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array: [10, 20, 30, 40, 50]\n",
+      "Array after resizing: [10, 20, 30, 40, 50, None, None, None, None, None]\n"
+     ]
+    }
+   ],
    "source": [
     "# Function to double the size of the array\n",
+    "def array_double(A):\n",
+    "    L = len(A)\n",
+    "    new_size = L * 2\n",
+    "    new_array = [None] * new_size\n",
     "\n",
+    "    j=0\n",
+    "    while j < L:\n",
+    "        new_array[j] = A[j]\n",
+    "        j+=1\n",
+    "\n",
+    "    return new_array    \n",
     "\n",
     "# Example usage\n",
     "array = [10, 20, 30, 40, 50]  # Given array (5 items long)\n",
